using UnityEngine;
using System.Collections;

public class ThrowAway : MonoBehaviour
{
    public float throwForce = 20f; // Throw force
    public GameObject level3; // Level 3 reference
    public Transform player; // Player Transform
    public Animator playerAnimator; // Player Animator (‡§Ö‡§¨ Public ‡§π‡•à)
    
    private PlayerMovement playerMovement; // Player Movement Script
    private Vector3 savedPlayerPosition; // Saved Position

    private void Start()
    {
        // Save player position at start
        if (player != null)
        {
            savedPlayerPosition = player.position;
            playerMovement = player.GetComponent<PlayerMovement>(); // Get Player Movement script
        }
    }

    private void OnTriggerEnter(Collider other)
    {
        if (other.CompareTag("Player")) // If player touches RightTrigger or LeftTrigger
        {
            Debug.Log("Player touched " + gameObject.name);

            Rigidbody rb = other.GetComponent<Rigidbody>();

            if (rb != null && playerMovement != null && playerAnimator != null)
            {
                // 1Ô∏è‚É£ Stop Player Movement
                playerMovement.enabled = false;
                rb.linearVelocity = Vector3.zero;

                // 2Ô∏è‚É£ Play Throw & Falling Animation
                playerAnimator.SetTrigger("Throw");
                playerAnimator.SetTrigger("Falling");

                // 3Ô∏è‚É£ Determine Throw Direction
                Vector3 throwDirection = CompareTag("RightTrigger") ? Vector3.right : Vector3.left;
                Debug.Log($"Throwing {throwDirection} with force {throwForce}");

                // 4Ô∏è‚É£ Apply Throw Force
                rb.AddForce(throwDirection * throwForce, ForceMode.Impulse);

                // 5Ô∏è‚É£ Restart Level & Load Saved Position after 3 seconds
                StartCoroutine(RestartLevelWithDelay(3f));
            }
        }
    }

    private IEnumerator RestartLevelWithDelay(float delay)
    {
        yield return new WaitForSeconds(delay);

        if (player != null)
        {
            // 6Ô∏è‚É£ Reset Player Position
            player.position = savedPlayerPosition;
            Debug.Log("‚úÖ Player position loaded after " + delay + " seconds: " + savedPlayerPosition);

            // 7Ô∏è‚É£ Enable Player Movement & Start Running Animation
            if (playerMovement != null && playerAnimator != null)
            {
                playerMovement.enabled = true;
                playerAnimator.SetTrigger("Run"); // üî• Running Animation Trigger
                
                Debug.Log("‚úÖ Player movement restarted with Running animation!");
            }
        }
    }
}
